[package]
name = "to-str"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Efficient interface to convert value to it's textual representation"
readme = "README.md"
repository = "https://github.com/DoumanAsh/to-str"
license = "BSL-1.0"
keywords = ["no_std"]
categories = ["value-formatting"]

[dependencies.sa]
version = "1"

[features]
doc = [] #Used when generating documentation

[profile.test]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
