[package]
name = "to-str"
version = "2.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2024"
rust-version = "1.85"
description = "Efficient interface to convert value to it's textual representation"
readme = "README.md"
repository = "https://github.com/DoumanAsh/to-str"
license = "BSL-1.0"
keywords = ["no_std"]
categories = ["value-formatting"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = false
